--- a/css/style.css
+++ b/css/style.css
@@ -35,20 +35,20 @@
   text-transform: uppercase;
 }
 .heading4 {
-  font-size: 30px;
+  font-size: 25px;
   color: var(--color3);
   font-family: var(--font3);
   text-transform: uppercase;
 }
 .heading5 {
-  font-size: 25px;
+  font-size: 20px;
   color: var(--color2);
   font-family: var(--font2);
   text-transform: uppercase;
   letter-spacing: 4.72px;
 }
 .subHeading1 {
-  font-size: 28px;
+  font-size: 22px;
   color: var(--color3);
   font-family: var(--font3);
   text-transform: uppercase;
@@ -71,7 +71,7 @@
   color: var(--color2);
   font-size: 16px;
   font-family: var(--font1);
-  line-height: 32fpx;
+  line-height: 32px;
 }
 .width80 {
   width: 80%;
@@ -245,4 +245,69 @@ nav ul li a {
 .selected {
   color: var(--color3);
   border-bottom: 2px solid white;
+}
+.avgEst {
+  color: var(--color2);
+}
+.destHead {
+  color: var(--color3);
+}
+/* --crew */
+
+.crewWrapper {
+  width: 100%;
+  height: 100vh;
+  background-image: url(/assets/crew/background-crew-desktop.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.crewCont {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 100vh;
+  align-items: end;
+}
+.crewCont2 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: end;
+}
+.crewHeading span {
+  font-weight: 700;
+  color: #ffffff50;
+}
+.crewCont2 img {
+  width: 68%;
+}
+.crewText .heading4 {
+  color: #ffffff70;
+}
+.crewCont1 {
+  display: flex;
+  flex-direction: column;
+  gap: 4em;
+  margin: 15% 0;
+}
+.crewText {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.crewButton {
+  display: flex;
+  gap: 15px;
+}
+.crewBtn {
+  width: 12px;
+  height: 12px;
+  cursor: pointer;
+  background-color: #ffffff50;
+  border-radius: 50%;
+  border: none;
+}
+.crewBtn:hover {
+  background-color: var(--color3);
+}
+.selected1 {
+  background-color: var(--color3);
 }
