--- a/css/style.css
+++ b/css/style.css
@@ -110,11 +110,15 @@ nav ul li {
   list-style: none;
   list-style: none;
   padding: 30px 0;
+  border-bottom: 2px solid transparent;
+}
+nav ul li:hover {
   border-bottom: 2px solid var(--color3);
 }
 nav ul li a {
   text-decoration: none;
   color: #fff;
+  padding: 30px 0;
 }
 .navigation::before {
   content: "";
@@ -166,7 +170,9 @@ nav ul li a {
 .exploreCont p {
   color: var(--color1);
 }
-
+.active {
+  border-bottom: 2px solid var(--color3);
+}
 /* --destination */
 
 .destiWrapper {
@@ -252,6 +258,7 @@ nav ul li a {
 .destHead {
   color: var(--color3);
 }
+
 /* --crew */
 
 .crewWrapper {
@@ -310,4 +317,72 @@ nav ul li a {
 }
 .selected1 {
   background-color: var(--color3);
+}
+
+/* --technology */
+
+.techWrapper {
+  width: 100%;
+  height: 100vh;
+  background-image: url(/assets/technology/background-technology-desktop.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: flex-end;
+}
+.techCont {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  height: 90vh;
+  gap: 2em;
+  width: 90%;
+  align-items: end;
+}
+.techCont1 {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.techContent {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.techText {
+  display: grid;
+  grid-template-columns: 2fr 10fr;
+}
+.techButton {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
+.techbtn {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  border: 1px solid #ffffff50;
+  background-color: transparent;
+  cursor: pointer;
+}
+.techbtn:hover {
+  background-color: var(--color3);
+  color: var(--color1);
+}
+.techContent .navText {
+  color: var(--color2);
+}
+.techCont2 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: end;
+}
+.techCont2 img {
+  width: 80%;
+}
+.selected2 {
+  background-color: var(--color3);
+  color: var(--color1);
 }
