--- a/css/style.css
+++ b/css/style.css
@@ -389,3 +389,36 @@ nav ul li a {
   background-color: var(--color3);
   color: var(--color1);
 }
+
+/* --media Query */
+
+@media (min-width: 700px) and (max-width: 1101px) {
+  .navCont {
+    top: 0%;
+  }
+  .logo {
+    margin-left: 15%;
+  }
+  .navigation::before {
+    width: 0;
+  }
+  .homeWrapper {
+    background-image: url(/assets/home/background-home-tablet.jpg);
+  }
+  .navCont {
+    grid-template-columns: 3fr 7fr;
+  }
+  .homeCont {
+    grid-template-columns: 1fr;
+  }
+  .homeCont1 {
+    text-align: center;
+    align-items: center;
+  }
+  .homeCont1 .para {
+    width: 100%;
+  }
+  .homeCont2 {
+    justify-content: center;
+  }
+}
