--- a/css/style.css
+++ b/css/style.css
@@ -418,7 +418,7 @@ nav ul li a {
   .homeCont1 .para {
     width: 100%;
   }
-  .homeCont2 {
+  /* .homeCont2 {
     justify-content: center;
-  }
+  } */
 }
