--- a/css/style.css
+++ b/css/style.css
@@ -415,10 +415,10 @@ nav ul li a {
     text-align: center;
     align-items: center;
   }
-  /* .homeCont1 .para {
+  .homeCont1 .para {
     width: 100%;
-  } */
-  /* .homeCont2 {
+  } 
+   .homeCont2 {
     justify-content: center;
-  } */
+  }
 }
