--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@
 }
 .para {
   color: var(--color2);
-  font-size: 16px;
+  font-size: 18px;
   font-family: var(--font1);
   line-height: 32px;
 }
@@ -235,7 +235,6 @@ nav ul li a {
 .destiLine {
   margin: 30px 0;
   color: #ffffff40;
-  background-color: aqua;
 }
 .destiDT {
   display: flex;
@@ -330,16 +329,22 @@ nav ul li a {
   background-image: url(/assets/technology/background-technology-desktop.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  display: flex;
-  justify-content: flex-end;
+  display: grid;
+  grid-template-rows: 1fr 2fr;
+  
+}
+.techWrap{
+  height: 90vh;
+  display: grid;
+  grid-template-rows: 1fr 2fr;
+  row-gap: 1em;
+
 }
 .techCont {
   display: grid;
   grid-template-columns: 3fr 2fr;
-  height: 90vh;
   gap: 2em;
-  width: 90%;
-  align-items: end;
+  align-items: center;
 }
 .techCont1 {
   height: 80%;
@@ -389,10 +394,19 @@ nav ul li a {
   background-color: var(--color3);
   color: var(--color1);
 }
+.techHeadingCont{
+  display: flex;
+  align-items: end;
+  width: 90%;
+}
 
 /* --media Query */
 
-@media (min-width: 700px) and (max-width: 1101px) {
+@media (min-width: 701px) and (max-width: 1050px) {
+  .width80 {
+    width: 80%;
+    margin: 0 auto;
+  }
   .navCont {
     top: 0%;
   }
@@ -421,10 +435,97 @@ nav ul li a {
   .homeCont2 {
     justify-content: center;
   }
-  /* .apporv {
-    width: 100%;
-  } */
-  .suny{
-    width: 100%;
+  .destiCont{
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 2fr;
+    height: 95vh;
   }
+  .destiCont1{
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  .destiCont1 img {
+    width: 70%;
+  }
+  .destiButton{
+    justify-content: center;
+  }
+  .destHeading{
+    width: 100%;
+    text-align: left;
+  }
+  #destinationName{
+    text-align: center;
+  }
+  #destinationDescription{
+    text-align: center;
+  }
+  .destiDT{
+    justify-content: space-evenly;
+  }
+  .destiDistCont{
+    align-items: center;
+  }
+  .destiTravelCont{
+    align-items: center;
+  }
+  .destiCont2 {
+    padding: 0;
+  }
+  .crewCont{
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 2fr;
+  }
+  .crewCont1{
+    margin: 10% 0 10% 0;
+    gap: 3.3em;
+  }
+  .crewCont2{
+    justify-content: center;
+  }
+  .crewCont2 img {
+    width: 55%;
+}
+.crewText{
+  align-items: center;
+}
+#crewBio{
+  text-align: center;
+}
+.crewButton{
+  justify-content: center;
+}
+.techWrapper{
+  justify-content: center;
+}
+.techCont{
+  grid-template-columns: 1fr;
+  grid-template-rows: 2fr 1fr;
+  height: 90vh;
+}
+.techCont{
+  justify-content: center;
+}
+.techCont2 img {
+  width: 60%;
+}
+.techCont2{
+  justify-content: center;
+}
+.techText{
+  grid-template-columns: 1fr;
+  row-gap: 30px;
+}
+.techButton{
+  flex-direction: row;
+  justify-content: center;
+}
+.techContent{
+  text-align: center;
+  gap: 20px;
+}
+.techWrap{
+  grid-template-rows: 1fr 2fr;
+  row-gap: 1em;
+}
 }
