--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@
 }
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* --home css */
@@ -331,14 +332,12 @@ nav ul li a {
   background-size: cover;
   display: grid;
   grid-template-rows: 1fr 2fr;
-  
 }
-.techWrap{
+.techWrap {
   height: 90vh;
   display: grid;
   grid-template-rows: 1fr 2fr;
   row-gap: 1em;
-
 }
 .techCont {
   display: grid;
@@ -394,13 +393,26 @@ nav ul li a {
   background-color: var(--color3);
   color: var(--color1);
 }
-.techHeadingCont{
+.techHeadingCont {
   display: flex;
   align-items: end;
   width: 90%;
 }
+.navIconMenu {
+  width: 2em;
+  height: 2em;
+  color: var(--color3);
+}
+.navIconMenu[name="close-outline"] {
+  display: none;
+}
+.navIcon {
+  display: none;
+  background: transparent;
+  cursor: pointer;
+}
 
-/* --media Query */
+/* --media Query tablet */
 
 @media (min-width: 701px) and (max-width: 1050px) {
   .width80 {
@@ -435,97 +447,318 @@ nav ul li a {
   .homeCont2 {
     justify-content: center;
   }
-  .destiCont{
+  .destiCont {
     grid-template-columns: 1fr;
     grid-template-rows: 3fr 2fr;
     height: 95vh;
   }
-  .destiCont1{
+  .destiCont1 {
     align-items: center;
     margin-bottom: 20px;
   }
   .destiCont1 img {
     width: 70%;
   }
-  .destiButton{
+  .destiButton {
     justify-content: center;
   }
-  .destHeading{
+  .destHeading {
     width: 100%;
     text-align: left;
   }
-  #destinationName{
+  #destinationName {
     text-align: center;
   }
-  #destinationDescription{
+  #destinationDescription {
     text-align: center;
   }
-  .destiDT{
+  .destiDT {
     justify-content: space-evenly;
   }
-  .destiDistCont{
+  .destiDistCont {
     align-items: center;
   }
-  .destiTravelCont{
+  .destiTravelCont {
     align-items: center;
   }
   .destiCont2 {
     padding: 0;
   }
-  .crewCont{
+  .crewCont {
     grid-template-columns: 1fr;
     grid-template-rows: 3fr 2fr;
   }
-  .crewCont1{
+  .crewCont1 {
     margin: 10% 0 10% 0;
     gap: 3.3em;
   }
-  .crewCont2{
+  .crewCont2 {
     justify-content: center;
   }
   .crewCont2 img {
     width: 55%;
+  }
+  .crewText {
+    align-items: center;
+  }
+  #crewBio {
+    text-align: center;
+  }
+  .crewButton {
+    justify-content: center;
+  }
+  .techCont {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    align-items: end;
+  }
+  .techCont2 img {
+    width: 60%;
+  }
+  .techCont2 {
+    justify-content: center;
+  }
+  .techText {
+    grid-template-columns: 1fr;
+    row-gap: 30px;
+  }
+  .techButton {
+    flex-direction: row;
+    justify-content: center;
+  }
+  .techContent {
+    text-align: center;
+    gap: 20px;
+  }
+  .techWrap {
+    grid-template-rows: 1fr 2fr;
+    row-gap: 3em;
+    height: 92vh;
+  }
+  .techCont1 {
+    justify-content: flex-end;
+  }
 }
-.crewText{
-  align-items: center;
+
+/* --media Query mobile */
+
+@media (max-width: 700px) {
+  .width80 {
+    width: 100%;
+  }
+  .heading3 {
+    font-size: 35px;
+  }
+  .logo {
+    margin-left: 0;
+  }
+  .para {
+    font-size: 16px;
+  }
+  .navText {
+    font-size: 20px;
+  }
+  nav ul li a {
+    padding: 10px 30px 10px 0;
+  }
+  nav ul li:hover {
+    border-right: 2px solid var(--color3);
+    border-bottom: none;
+  }
+  nav ul li {
+    padding: 10px 30px 10px 0;
+  }
+  .active {
+    border-right: 2px solid var(--color3);
+    border-bottom: none;
+  }
+  .navCont {
+    top: 0;
+    padding: 20px;
+    grid-template-columns: 3fr 1fr;
+  }
+  .navigation {
+    position: absolute;
+    height: 100vh;
+    top: 0;
+    right: 0;
+    width: 70%;
+    justify-content: flex-end;
+    align-items: flex-start;
+    transform: translateX(100%);
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+  }
+  .navigation::before {
+    width: 0;
+  }
+  nav ul {
+    margin-top: 40%;
+    flex-direction: column;
+    gap: 20px;
+    width: 85%;
+  }
+  .navIcon {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .active .navigation {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+  .active .navIcon .navIconMenu[name="close-outline"] {
+    display: block;
+  }
+  .active .navIcon .navIconMenu[name="menu-outline"] {
+    display: none;
+  }
+  .homeCont {
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr 1fr;
+    gap: 4em;
+    padding: 0 20px;
+  }
+  .homeCont1 {
+    text-align: center;
+    align-items: center;
+  }
+  .homeCont1 .para {
+    width: 100%;
+  }
+  .homeCont2 {
+    justify-content: center;
+  }
+  .exploreCont {
+    width: 300px;
+    height: 300px;
+  }
+  .exploreCont:hover {
+    box-shadow: 0 0 0 2rem hsla(0, 0%, 100%, 0.1);
+  }
+  .destiCont {
+    padding: 0 20px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 2fr;
+    height: 95vh;
+  }
+  .techWrap {
+    padding: 0 20px;
+  }
+  .destiCont1 {
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  .destiCont1 img {
+    width: 60%;
+  }
+  .destiButton {
+    justify-content: center;
+  }
+  .destHeading {
+    width: 100%;
+    text-align: left;
+  }
+  #destinationName {
+    text-align: center;
+  }
+  #destinationDescription {
+    text-align: center;
+  }
+  .destiDT {
+    justify-content: space-evenly;
+  }
+  .destiDistCont {
+    align-items: center;
+  }
+  .destiTravelCont {
+    align-items: center;
+  }
+  .destiCont2 {
+    padding: 0;
+  }
+  .crewCont {
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 2fr;
+    padding: 0 20px;
+  }
+  .crewCont1 {
+    margin: 10% 0 5% 0;
+    gap: 3.3em;
+  }
+  #crewName {
+    text-align: center;
+  }
+  .crewCont2 {
+    justify-content: center;
+  }
+  .crewCont2 img {
+    width: 55%;
+  }
+  .crewText {
+    align-items: center;
+  }
+  #crewBio {
+    text-align: center;
+  }
+  .crewButton {
+    justify-content: center;
+  }
+  .techCont {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    align-items: end;
+  }
+  .techCont2 img {
+    width: 60%;
+  }
+  .techCont2 {
+    justify-content: center;
+  }
+  .techText {
+    grid-template-columns: 1fr;
+    row-gap: 30px;
+  }
+  .techButton {
+    flex-direction: row;
+    justify-content: center;
+  }
+  .techContent {
+    text-align: center;
+    gap: 20px;
+  }
+  .techWrap {
+    grid-template-rows: 1fr 2fr;
+    row-gap: 3em;
+    height: 92vh;
+  }
+  .techCont1 {
+    justify-content: flex-end;
+  }
+  .homeWrapper {
+    background-image: url(/assets/home/background-home-mobile.jpg);
+  }
+  .destiWrapper {
+    background-image: url(/assets/destination/background-destination-mobile.jpg);
+  }
 }
-#crewBio{
-  text-align: center;
+
+.heading1 {
+  font-size: 100px;
 }
-.crewButton{
-  justify-content: center;
+.heading2 {
+  font-size: 70px;
 }
-.techWrapper{
-  justify-content: center;
+
+.heading4 {
+  font-size: 25px;
 }
-.techCont{
-  grid-template-columns: 1fr;
-  grid-template-rows: 2fr 1fr;
-  height: 90vh;
+.heading5 {
+  font-size: 20px;
 }
-.techCont{
-  justify-content: center;
+.subHeading1 {
+  font-size: 22px;
 }
-.techCont2 img {
-  width: 60%;
-}
-.techCont2{
-  justify-content: center;
-}
-.techText{
-  grid-template-columns: 1fr;
-  row-gap: 30px;
-}
-.techButton{
-  flex-direction: row;
-  justify-content: center;
-}
-.techContent{
-  text-align: center;
-  gap: 20px;
-}
-.techWrap{
-  grid-template-rows: 1fr 2fr;
-  row-gap: 1em;
-}
+.subHeading2 {
+  font-size: 14px;
 }
